# signed-heat-python

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  demo.py  pyproject.toml
.github/workflows/: deploy.yml  docs.yml  test-build-deploy.yml  test-build.yml  test_linux.yml  test_macos.yml  test_os.yml  test_windows.yml
docs/: README.md  mkdocs.yml
docs/docs/: index.md  theme.css
docs/docs/algorithm/: solvers.md
docs/site/: 404.html  index.html  sitemap.xml
docs/site/algorithm/solvers/: index.html
docs/site/assets/javascripts/: bundle.13a4f30d.min.js
docs/site/assets/javascripts/lunr/: tinyseg.js  wordcut.js
docs/site/assets/javascripts/lunr/min/: lunr.ar.min.js  lunr.da.min.js  lunr.de.min.js  lunr.du.min.js  lunr.el.min.js  lunr.es.min.js  lunr.fi.min.js  lunr.fr.min.js  lunr.he.min.js  lunr.hi.min.js  lunr.hu.min.js  lunr.hy.min.js  lunr.it.min.js  lunr.ja.min.js  lunr.kn.min.js  lunr.ko.min.js  lunr.multi.min.js  lunr.nl.min.js  lunr.no.min.js  lunr.pt.min.js  lunr.ro.min.js  lunr.ru.min.js  lunr.sa.min.js  lunr.stemmer.support.min.js  lunr.sv.min.js  lunr.ta.min.js  lunr.te.min.js  lunr.th.min.js  lunr.tr.min.js  lunr.vi.min.js  lunr.zh.min.js
docs/site/assets/javascripts/workers/: search.d50fe291.min.js
docs/site/search/: search_index.json
src/cpp/: solvers.cpp
src/py/: __init__.py  solvers.py
src/shm3d/: solvers.py
src/signed_heat_method/: __init__.py  solvers.py
src/signedheat3d/: __init__.py
test/: README.md  demo.py  mesh_io.py  test.py
