[build-system]
build-backend = "scikit_build_core.build"
requires = ["scikit-build-core"]

[project]
authors = [
  {name = "Nicole Feng", email = "nicolefeng7@gmail.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3"
]
dependencies = [
  "numpy"
]
description = "Python bindings for the signed-heat-3d library"
maintainers = [
  {name = "Nicole Feng", email = "nicolefeng7@gmail.com"}
]
name = "signed_heat_method"
readme = "README.md"
requires-python = ">=3.7"
version = "0.1.0"
license.file = "LICENSE"

[project.urls]
Homepage = "https://github.com/nzfeng/signed-heat-python"

[tool.cibuildwheel]
archs = ["auto64"]  # 64-bit only
skip = "cp37-* pp* *musllinux*"  # disable PyPy and musl-based wheels
test-command = "pytest {project}/test"
test-requires = "pytest"

[tool.cibuildwheel.macos]
archs = ["native"]

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin", 'npt_promote']
# disable_error_code = ['assignment', 'index', 'misc']
strict = true

[tool.ruff]

[tool.scikit-build]
build.verbose = true
logging.level = "INFO"
